{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Touch",
            "id": "5c61c802-ddd8-47f5-a81d-430950aac5d6",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "d8ca4e13-684c-4749-944c-1882bad9c9d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "6a125c38-0c6c-4d6a-87b9-aa33da4e0ac5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a2e36c87-b870-4219-a821-8ef6c2eefb26",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4fcf2b1-9be8-43ed-a7c3-a3460a8ef3c7",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}